Fix maker like persistence and add sorting/report features

--- a/admin.html
+++ b/admin.html
@@ -9,49 +9,69 @@
     <style>body { font-family: sans-serif; }</style>
 </head>
 <body class="bg-slate-100 text-slate-800 p-8">
-    <div id="app" class="max-w-4xl mx-auto bg-white p-6 rounded-xl shadow">
-        <div class="flex justify-between items-center mb-6">
+    <div id="app" class="max-w-5xl mx-auto bg-white p-6 rounded-xl shadow space-y-10">
+        <div class="flex justify-between items-center">
             <h1 class="text-2xl font-bold">👮‍♂️ 管理ダッシュボード</h1>
             <a href="index.html" class="text-blue-600 hover:underline">サイトに戻る</a>
         </div>
-        
-        <p class="mb-4 text-sm text-slate-500">
-            登録されているユーザー投稿一覧です。不適切なコンテンツは削除してください。<br>
-            <span class="text-red-500 font-bold">※削除すると元に戻せません。</span>
-        </p>
 
-        <div v-if="loading" class="text-center py-10">読み込み中...</div>
+        <section>
+            <p class="mb-4 text-sm text-slate-500">
+                登録されているユーザー投稿一覧です。不適切なコンテンツは削除してください。<br>
+                <span class="text-red-500 font-bold">※削除すると元に戻せません。</span>
+            </p>
 
-        <div v-else class="overflow-x-auto">
-            <table class="w-full border-collapse text-left text-sm">
-                <thead>
-                    <tr class="bg-slate-50 border-b">
-                        <th class="p-3">ID</th>
-                        <th class="p-3">タイトル</th>
-                        <th class="p-3">プロンプト (一部)</th>
-                        <th class="p-3">操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="maker in makers" :key="maker.id" class="border-b hover:bg-slate-50">
-                        <td class="p-3 font-mono text-xs text-slate-400">{{ maker.id }}</td>
-                        <td class="p-3 font-bold flex items-center gap-2">
-                            <span class="text-xl">{{ maker.emoji }}</span>
-                            {{ maker.title }}
-                        </td>
-                        <td class="p-3 text-slate-500 truncate max-w-xs">{{ maker.systemPrompt }}</td>
-                        <td class="p-3">
-                            <button @click="deleteMaker(maker.id)" class="bg-red-100 text-red-600 px-3 py-1 rounded hover:bg-red-200 font-bold text-xs">
-                                削除 🗑
-                            </button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <div v-if="makers.length === 0" class="text-center py-10 text-slate-400">
-                投稿はありません。
+            <div v-if="loading" class="text-center py-10">読み込み中...</div>
+
+            <div v-else class="overflow-x-auto">
+                <table class="w-full border-collapse text-left text-sm">
+                    <thead>
+                        <tr class="bg-slate-50 border-b">
+                            <th class="p-3">ID</th>
+                            <th class="p-3">タイトル</th>
+                            <th class="p-3">プロンプト (一部)</th>
+                            <th class="p-3">操作</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="maker in makers" :key="maker.id" class="border-b hover:bg-slate-50">
+                            <td class="p-3 font-mono text-xs text-slate-400">{{ maker.id }}</td>
+                            <td class="p-3 font-bold flex items-center gap-2">
+                                <span class="text-xl">{{ maker.emoji }}</span>
+                                {{ maker.title }}
+                            </td>
+                            <td class="p-3 text-slate-500 truncate max-w-xs">{{ maker.systemPrompt }}</td>
+                            <td class="p-3">
+                                <button @click="deleteMaker(maker.id)" class="bg-red-100 text-red-600 px-3 py-1 rounded hover:bg-red-200 font-bold text-xs">
+                                    削除 🗑
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div v-if="makers.length === 0" class="text-center py-10 text-slate-400">
+                    投稿はありません。
+                </div>
             </div>
-        </div>
+        </section>
+
+        <section>
+            <h2 class="text-xl font-bold mb-3">🚩 通報リスト</h2>
+            <div v-if="loadingReports" class="text-center py-8 text-slate-500">通報を読み込み中...</div>
+            <ul v-else class="space-y-3">
+                <li v-for="report in reports" :key="report.id" class="border border-amber-200 bg-amber-50 rounded-xl p-4">
+                    <div class="flex items-center justify-between gap-3 mb-2">
+                        <div class="text-sm font-bold text-slate-900">{{ report.makerTitle || 'タイトル不明' }} <span class="text-xs text-slate-400">({{ report.makerId }})</span></div>
+                        <div class="text-xs text-slate-500">{{ formatDate(report.createdAt) }}</div>
+                    </div>
+                    <p class="text-sm text-slate-700 whitespace-pre-wrap">{{ report.reason }}</p>
+                    <p class="text-xs text-slate-500 mt-2">報告者: {{ report.reporterName || report.reporterId || '匿名' }}</p>
+                </li>
+            </ul>
+            <div v-if="!loadingReports && reports.length === 0" class="text-center py-8 text-slate-400">
+                通報はまだありません。
+            </div>
+        </section>
     </div>
 
     <script type="module">
@@ -68,11 +88,13 @@
             data() {
                 return {
                     makers: [],
-                    loading: true
+                    reports: [],
+                    loading: true,
+                    loadingReports: true
                 }
             },
             async mounted() {
-                await this.fetchMakers();
+                await Promise.all([this.fetchMakers(), this.fetchReports()]);
             },
             methods: {
                 async fetchMakers() {
@@ -87,11 +109,27 @@
                         this.loading = false;
                     }
                 },
+                async fetchReports() {
+                    this.loadingReports = true;
+                    try {
+                        const q = query(collection(db, "reports"), orderBy("createdAt", "desc"));
+                        const querySnapshot = await getDocs(q);
+                        this.reports = querySnapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+                    } catch (e) {
+                        console.error("通報読み込み失敗:", e);
+                    } finally {
+                        this.loadingReports = false;
+                    }
+                },
+                formatDate(ts) {
+                    if (!ts?.seconds) return '-';
+                    return new Date(ts.seconds * 1000).toLocaleString();
+                },
                 async deleteMaker(id) {
                     if (!confirm("本当に削除しますか？")) return;
                     try {
                         await deleteDoc(doc(db, "makers", id));
-                        this.makers = this.makers.filter(m => m.id !== id); // 画面からも消す
+                        this.makers = this.makers.filter(m => m.id !== id);
                         alert("削除しました。");
                     } catch (e) {
                         alert("削除失敗: " + e.message);
